# soccer-rs

./: Cargo.toml  README.md
data/: abbrev.json  classifier.json  isco1988.csv  isco1988_soc2010.csv  naics2022.csv  noc2011.csv  noc2011_soc2010.csv  sic1987.csv  sic1987_naics2022.csv  soc1980.csv  soc1980_soc2010.csv  soc2010.csv
src/: cache.rs  classifier.rs  crosswalk.rs  error.rs  io.rs  lib.rs  main.rs  preprocessing.rs
