[package]
name = "playserde"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
csv = "1.4.0"
dirs = "6.0.0"
hf-hub = "0.5.0"
once_cell = "1.21.4"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
